crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__deduplicate_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> deduplicate_imports.py:1:1
  |
1 | / import os
2 | | import os
3 | | import os as os1
4 | | import os as os2
  | |________________^
help: Organize imports
  |
1 + import os
2 + import os as os1
3 + import os as os2
  |
