crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__detect_same_package.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> bar.py:1:1
  |
1 | / import os
2 | | import pandas
3 | | import foo.baz
  | |______________^
help: Organize imports
  |
1 + import os
2 + 
3 + import pandas
4 + 
5 + import foo.baz
  |
